# rust-jwt

./: Cargo.toml  LICENSE  README.md  test_rsa.ps1  test_rsa.sh
benches/: jwt.rs
examples/: claims.rs  custom_header.rs
samples/jwk/: a1-pub-keys-set.json  a2-priv-keys-set.json  a3-symmetric-keys-set.json  c1-plaintext-rsa-key-octets.json  c1-plaintext-rsa-key.json  c3-cek.json  c4-derived-key.json  c4-passphrase.json  c4-salt.json  c5-encrypted-key-base64.txt  c5-encrypted-key.json  c6-iv.json  c7-additional-auth-data.json  c8-authentication-tag-base64.txt  c8-authentication-tag.json  c8-ciphertext-base64.txt  c8-ciphertext.json  c9-result.txt
samples/jws/a1 - hs256/: 1-header-octets.json  1-header.json  2-payload-octets.json  3-signing-input-octets.json  4-key.json  5-hs256-octets.json
samples/jws/a2 - rs256/: 1-header-octets.json  3-signing-input-octets.json  4-rsa-key.json  5-signature-octets.json
src/: algorithm.rs  bignum.rs  header.rs  json.rs  jwk.rs  jwt.rs  key_type.rs  lib.rs  result.rs  signer.rs  validation.rs  verifier.rs
src/claims/: expiry.rs  mod.rs  not_before.rs  time.rs
src/crypto/: mac_signer.rs  mod.rs  rsa.rs
