[package]
name = "jsonwebtoken"
version = "1.1.3"
authors = ["Vincent Prouillet <vincent@wearewizards.io>", "Chris Dawes <cmsd2@cantab.net>"]
license = "MIT"
readme = "README.md"
description = "Create and parse JWT in a strongly typed way."
homepage = "https://github.com/Keats/rust-jwt"
repository = "https://github.com/Keats/rust-jwt"
keywords = ["jwt", "web", "api", "token", "json"]

[replace]
"openssl:0.7.11" = {git = "https://github.com/sfackler/rust-openssl.git", commit = "dce59a63" }

[dependencies]
rustc-serialize = "0.3"
clippy = {version = "~0.0.44", optional = true}
rust-crypto = "0.2.35"
openssl = "0.7.11"
quick-error = "1.0"
serde = "0.7.4"
serde_json = "0.7.0"
serde_macros = "0.7.4"
log = "*"
chrono = "*"
time = "*"
rbvt = {git = "https://github.com/cmsd2/rbvt.git"}
cast = "*"

[features]
dev = ["clippy"]

[profile.bench]
lto = true
codegen-units = 1
opt-level = 3
